fix: adjust swagger operation tag spacing

--- a/app/api/static/swagger-washing-machine.css
+++ b/app/api/static/swagger-washing-machine.css
@@ -356,7 +356,7 @@ body {
 }
 
 .swagger-ui .opblock-tag-section .operation-tag-content {
-  padding-top: 12px;
+  padding-top: 18px;
 }
 
 .swagger-ui .opblock {
